Adjusted width of grid to prevent overlap of text.

--- a/components/game/game.module.scss
+++ b/components/game/game.module.scss
@@ -367,12 +367,12 @@ $tertiary-color: #D6536D;
   }
 
   .gameBoard {
-    grid-template-columns: 33% 67%;
+    grid-template-columns: 37% 63%;
     grid-template-rows: max-content 1fr;
     > .middleDiv {
       grid-column: 2 / 3;
       grid-row: 1 / 2;
-      align-self: end;
+      align-self: center ;
     }
     > li:nth-child(2), li:nth-child(3), li:nth-child(4) {
       grid-column: 1 / 2;
